fix games mode spacing

--- a/src/global.less
+++ b/src/global.less
@@ -65,21 +65,6 @@ ol {
   text-align: center !important;
 }
 
-.container-video {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 56.25%;
-}
-
-.video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  max-width: 100%;
-  max-height: 100%;
-}
-
 .ant-pro-form-login-page-container {
   display: flex;
   flex: 1;
